--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -299,7 +299,17 @@ h6 {
 
 .header .logo img {
   max-height: 40px;
+  width: auto;
   margin-right: 8px;
+}
+
+.logo img {
+  max-height: 40px;
+  width: auto;
+  margin-right: 8px;
+  margin-left: 20px;
+  margin-top: 8px;
+  display:inline-block;
 }
 
 .header .logo h1 {
@@ -378,7 +388,7 @@ h6 {
     font-family: var(--font-primary);
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.5);
     white-space: nowrap;
