Basic features are done. Okay to post on hosting

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -41,8 +41,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a th:href="@{index}" class="active">Home</a></li>
+          <li><a th:href="@{about}">About</a></li>
           <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a th:href="@{landscape}">Landscape</a></li>
@@ -57,7 +57,7 @@
       <div class="header-social-links">
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
-        <a href="https://instagram.com/choo_nguyen?igshid=MjEwN2IyYWYwYw==" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/bao.n.nguyen/profilecard/?igsh=MXQ1MnlsdmhwM3g5Nw==" class="instagram"><i class="bi bi-instagram"></i></a>
         <!--<a href="#" class="youtube"><i class="bi bi-youtube"></i></a> -->
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
