--- a/src/main/resources/templates/gallery-landscape.html
+++ b/src/main/resources/templates/gallery-landscape.html
@@ -2,9 +2,11 @@
 <html xmlns:th="http://thymeleaf.org" lang="en"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
+<head>
+  <title>Landscape</title>
+</head>
 
 <body>
-
   <main layout:fragment="content" id="main" data-aos="fade" data-aos-delay="1500">
 
     <!-- ======= End Page Header ======= -->
