--- a/src/main/resources/templates/gallery-event.html
+++ b/src/main/resources/templates/gallery-event.html
@@ -30,7 +30,7 @@
       <div class="container-fluid">
 
         <div class="row gy-4 justify-content-center">
-          <div th:each="photo: ${photo}" class="col-xl-3 col-lg-4 col-md-6">
+          <div th:each="photo: ${photos}" class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img th:src="${photo.photoUrl}" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
