--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -18,10 +18,9 @@
 </div>
 <!-- ===== End Greeting ==== -->
 
-
 <body layout:fragment="content" id="admin-page">
-
 <main id="main" data-aos="fade" data-aos-delay="1000" class="mt-3">
+
     <div class="page-header d-flex align-items-center">
         <div class="container position-relative">
             <div class="row d-flex justify-content-center">
@@ -32,7 +31,7 @@
         </div>
     </div>
     <div class="container">
-        <form method="post" action="/admin">
+        <form method="get" action="/admin">
             <div class="d-flex justify-content-center align-items-center col-lg-3 position-relative">
                 <p>Collection:</p>
                 <div class="dropdown" style="margin-left: 20px;">
@@ -42,13 +41,13 @@
                             type="button"
                             data-bs-toggle="dropdown"
                             aria-expanded="false">
-                        Choose collections
+                            Choose collections
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item admin-collection" onclick="selectCollection('Landscape')">Landscape</a></li>
-                        <li><a class="dropdown-item admin-collection" onclick="selectCollection('Cityscape')">Cityscape</a></li>
-                        <li><a class="dropdown-item admin-collection" onclick="selectCollection('Event')">Event</a></li>
-                        <li><a class="dropdown-item admin-collection" onclick="selectCollection('Product')">Product</a>
+                        <li><a class="dropdown-item admin-collection" href="?galleryName=landscape">Landscape</a></li>
+                        <li><a class="dropdown-item admin-collection" href="?galleryName=cityscape">Cityscape</a></li>
+                        <li><a class="dropdown-item admin-collection" href="?galleryName=event">Event</a></li>
+                        <li><a class="dropdown-item admin-collection" href="?galleryName=product">Product</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +59,7 @@
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
         <div class="container p-5" style="border: 1px solid #00bf63; border-radius: 20px">
-            <div class="row gy-4 justify-content-center">
+            <div id ="photoContainer" class="row gy-4 justify-content-center">
                 <div th:each="photo: ${photos}" class="col-xl-3 col-lg-4 col-md-6">
                     <div class="gallery-item h-100">
                         <img th:src="${photo.photoUrl}" class="img-fluid" alt=""/>
