--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -75,14 +75,15 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="gallery-item h-100">
-                        <form method="post" th:action="@{/admin/new}" enctype="multipart/form-data">
+                        <form method="post" th:action="@{/admin/uploadPhoto}" enctype="multipart/form-data">
+                            <input type="hidden" id="galleryName" name="galleryName" th:value="${param.galleryName}"/>
                             <!-- Plus Button for uploading new photo -->
                             <a id="addNewItems" href="#" class="d-flex align-items-center justify-content-center">
                                 <label for="photoUpload" style="cursor: pointer">
                                     <img src="assets/img/plus.png" class="img-fluid" alt="Add New Photo"/>
                                 </label>
                             </a>
-                            <input type="file" id="photoUpload" name="photoFile" style="display:none;"
+                            <input type="file" id="photoUpload" name="photoFile" accept=".jpeg, .jpg" style="display:none;"
                                    onchange="this.form.submit()"/>
                         </form>
                     </div>
