--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -63,16 +63,23 @@
                 <div th:each="photo: ${photos}" class="col-xl-3 col-lg-4 col-md-6">
                     <div class="gallery-item h-100">
                         <img th:src="${photo.photoUrl}" class="img-fluid" alt=""/>
+                        <input type="hidden" id="photoId" th:value="${photo.id}">
+
+                        <!-- The "x" button for deleting photo-->
                         <div class="gallery-links d-flex align-items-center justify-content-center">
-                            <a th:href="${photo.photoUrl}" class="preview-link">
-                                <i type="button" class="fa-solid fa-x btn btn-primary" data-bs-toggle="modal"
-                                   data-bs-target="#confirm"></i>
+                            <a th:href="@{/photo/{id}(id=${photo.id})}"
+                            class = "btn btn-danger"
+                            onclick = "return confirm('Are you sure you want to delete this photo?');">
+                                <i class="fa-solid fa-x"></i> X
                             </a>
+
                         </div>
                     </div>
                 </div>
                 <!-- End Gallery Item -->
 
+
+                <!-- The "+" Sign to add new item-->
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="gallery-item h-100">
                         <form method="post" th:action="@{/admin/uploadPhoto}" enctype="multipart/form-data">
@@ -92,25 +99,26 @@
             </div>
         </div>
 
-        <!-- DELETE IMG -->
-        <div class="modal fade" id="confirm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-             aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5 text-bg-light" id="staticBackdropLabel">Delete Confirmation</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body text-bg-light">
-                        Are you sure you want to delete this image?
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- CONFIRM DELETE POPUP -->
+<!--        <div class="modal fade" id="confirm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"-->
+<!--             aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
+<!--            <div class="modal-dialog">-->
+<!--                <div class="modal-content">-->
+<!--                    <div class="modal-header">-->
+<!--                        <h1 class="modal-title fs-5 text-bg-light" id="staticBackdropLabel">Delete Confirmation</h1>-->
+<!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--                    </div>-->
+<!--                    <div class="modal-body text-bg-light">-->
+<!--                        Are you sure you want to delete this image?-->
+<!--                    </div>-->
+<!--                    <div class="modal-footer">-->
+<!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>-->
+<!--                        <button type="button" class="btn btn-danger" onClick="confirmDelete()">Delete</button>-->
+<!--                        <input type="hidden" id="modalPhotoId">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <!-- End Deleting IMG -->
     </section>
     <!-- End Gallery Section -->
