--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -67,9 +67,7 @@
 
 
   <!-- ======= CONTENT ======= -->
-  <div layout:fragment="content">
-
-  </div>
+  <div layout:fragment="content"></div>
 
 
   <!-- ======= FOOTER ======= -->
