--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,32 +1,97 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" lang="en"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">
-
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>B.N.N Admin</title>
 </head>
 
-<!-- ===== Greeting ==== -->
-<div id="hi" data-aos="fade" data-aos-delay="1000">
-    <p class="text-center">
-        <span id="greeting">Good Morning</span>
-        <span id="admin-name" style="color: #00bf63;">Bao</span>. It's good to see you!
-    </p>
-</div>
-<!-- ===== End Greeting ==== -->
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<body layout:fragment="content" id="admin-page">
+    <title>Admin</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link th:href="@{assets/img/favicon.png}" rel="icon">
+    <link th:href="@{assets/img/apple-touch-icon.png}" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link th:href="@{assets/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{assets/vendor/bootstrap-icons/bootstrap-icons.css}" rel="stylesheet">
+    <link th:href="@{assets/vendor/swiper/swiper-bundle.min.css}" rel="stylesheet">
+    <link th:href="@{assets/vendor/glightbox/css/glightbox.min.css}" rel="stylesheet">
+    <link th:href="@{assets/vendor/aos/aos.css}" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link th:href="@{assets/css/main.css}" rel="stylesheet">
+    <link th:href="@{assets/css/admin.css}" rel="stylesheet">
+</head>
+
+<body>
+<!-- ======= HEADER ======= -->
+<header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+
+        <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+            <img th:src="@{/assets/img/BNN-logo.png}" alt="Logo"/>
+        </a>
+
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a th:href="@{index}" class="active">Home</a></li>
+                <li><a th:href="@{about}">About</a></li>
+                <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+                    <ul>
+                        <li><a th:href="@{landscape}">Landscape</a></li>
+                        <li><a th:href="@{cityscape}">Cityscape</a></li>
+                        <li><a th:href="@{event}">Event</a></li>
+                        <li><a th:href="@{product}">Product</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav><!-- .navbar -->
+
+        <form id="logoutForm" action="/logout" method="post" style="display: inline;">
+            <button type="submit" class="logout-button">
+                <i class="fa-solid fa-power-off"></i> Logout
+            </button>
+        </form>
+
+        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+    </div>
+</header><!-- End Header -->
+
 <main id="main" data-aos="fade" data-aos-delay="1000" class="mt-3">
 
     <div class="page-header d-flex align-items-center">
         <div class="container position-relative">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-6 text-center">
-                    <h2>Admin</h2>
+                    <h2>
+                        Hey Hey...
+                        <small id="hi" data-aos="fade" data-aos-delay="1000">
+                            <span id="greeting">Good Morning</span>
+                            <span id="admin-name" >Bao</span>. It's good to see you!
+                        </small>
+                    </h2>
                 </div>
+<!--                &lt;!&ndash; ===== Greeting ==== &ndash;&gt;-->
+<!--                <div id="hi" data-aos="fade" data-aos-delay="1000">-->
+<!--                    <p class="text-center">-->
+<!--                        <span id="greeting">Good Morning</span>-->
+<!--                        <span id="admin-name" style="color: #00bf63;">Bao</span>. It's good to see you!-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--                &lt;!&ndash; ===== End Greeting ==== &ndash;&gt;-->
             </div>
         </div>
     </div>
@@ -85,7 +150,7 @@
                         <form method="post" th:action="@{/admin/uploadPhoto}" enctype="multipart/form-data">
                             <input type="hidden" id="galleryName" name="galleryName" th:value="${param.galleryName}"/>
                             <!-- Plus Button for uploading new photo -->
-                            <a id="addNewItems" href="#" class="d-flex align-items-center justify-content-center">
+                            <a id="addNewItems" href="#" class="d-flex align-items-center justify-content-center disabled-link">
                                 <label for="photoUpload" style="cursor: pointer">
                                     <img src="assets/img/plus.png" class="img-fluid" alt="Add New Photo"/>
                                 </label>
@@ -98,34 +163,45 @@
                 <!-- End Add New Item -->
             </div>
         </div>
-
-        <!-- CONFIRM DELETE POPUP -->
-<!--        <div class="modal fade" id="confirm" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"-->
-<!--             aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
-<!--            <div class="modal-dialog">-->
-<!--                <div class="modal-content">-->
-<!--                    <div class="modal-header">-->
-<!--                        <h1 class="modal-title fs-5 text-bg-light" id="staticBackdropLabel">Delete Confirmation</h1>-->
-<!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                    </div>-->
-<!--                    <div class="modal-body text-bg-light">-->
-<!--                        Are you sure you want to delete this image?-->
-<!--                    </div>-->
-<!--                    <div class="modal-footer">-->
-<!--                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>-->
-<!--                        <button type="button" class="btn btn-danger" onClick="confirmDelete()">Delete</button>-->
-<!--                        <input type="hidden" id="modalPhotoId">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-        <!-- End Deleting IMG -->
     </section>
     <!-- End Gallery Section -->
 </main>
 <!-- End #main -->
 
 <!-- Template Admin JS File -->
-<script th:src="@{assets/js/admin.js}"></script>
+<footer th:fragment="footer" id="footer" class="footer">
+    <div class="container">
+        <div class="copyright">
+            <!--&copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved-->
+        </div>
+        <div class="credits">
+            <!-- All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
+            <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
+        </div>
+    </div>
+</footer><!-- End Footer -->
+
+<!-- ======= OTHER ======= -->
+<div th:fragment="other">
+    <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+    <div id="preloader">
+        <div class="line"></div>
+    </div>
+
+    <!-- Vendor JS Files -->
+    <script th:src="@{assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{assets/vendor/swiper/swiper-bundle.min.js}"></script>
+    <script th:src="@{assets/vendor/glightbox/js/glightbox.min.js}"></script>
+    <script th:src="@{assets/vendor/aos/aos.js}"></script>
+    <script th:src="@{assets/vendor/php-email-form/validate.js}"></script>
+
+    <!-- Template Main JS File -->
+    <script th:src="@{assets/js/main.js}"></script>
+    <script th:src="@{assets/js/admin.js}"></script>
+</div>
 </body>
 </html>
