add some data-cy tag for automation test

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -73,6 +73,7 @@
                     class="form-control"
                     placeholder="Username"
                     name="username"
+                    data-cy="usernameText"
             >
 
             <p>Password</p>
@@ -82,8 +83,9 @@
                     class="form-control"
                     placeholder="Password"
                     name="password"
+                    data-cy="passwordText"
             >
-            <button type="submit" value="Log in" class="btn btn-green" style="width: 150px;">Sign In</button>
+            <button type="submit" value="Log in" class="btn btn-green" style="width: 150px;" data-cy="submitBtn">Sign In</button>
           </div>
         </form>
       </div>
