--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -59,8 +59,8 @@
             </ul>
         </nav><!-- .navbar -->
 
-        <form id="logoutForm" action="/logout" method="post" style="display: inline;">
-            <button type="submit" class="logout-button">
+        <form id="logoutForm" action="/logout" method="post" style="display: inline;" data-cy="logoutForm">
+            <button type="submit" class="logout-button" data-cy="logoutBtn">
                 <i class="fa-solid fa-power-off"></i> Logout
             </button>
         </form>
@@ -84,14 +84,6 @@
                         </small>
                     </h2>
                 </div>
-<!--                &lt;!&ndash; ===== Greeting ==== &ndash;&gt;-->
-<!--                <div id="hi" data-aos="fade" data-aos-delay="1000">-->
-<!--                    <p class="text-center">-->
-<!--                        <span id="greeting">Good Morning</span>-->
-<!--                        <span id="admin-name" style="color: #00bf63;">Bao</span>. It's good to see you!-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--                &lt;!&ndash; ===== End Greeting ==== &ndash;&gt;-->
             </div>
         </div>
     </div>
@@ -102,6 +94,7 @@
                 <div class="dropdown" style="margin-left: 20px;">
                     <button
                             id="dropdownMenuButton"
+                            data-cy="dropdownBtn"
                             class="btn btn-light dropdown-toggle"
                             type="button"
                             data-bs-toggle="dropdown"
@@ -110,7 +103,7 @@
                                 <span th:text="${galleryName != null ? galleryName : 'Choose collections'}"></span>
                             </span>
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" data-cy="dropdownMenu">
                         <li th:each="category: ${categories}">
                             <a class="dropdown-item admin-collection"
                                 href="#"
@@ -129,7 +122,7 @@
     <!-- ======= Gallery Section ======= -->
     <section id="gallery" class="gallery">
         <div class="container p-5" style="border: 1px solid #00bf63; border-radius: 20px">
-            <div id ="photoContainer" class="row gy-4 justify-content-center">
+            <div id ="photoContainer" class="row gy-4 justify-content-center" data-cy="photoGrid">
                 <div th:each="photo: ${photos}" class="col-xl-3 col-lg-4 col-md-6">
                     <div class="gallery-item h-100">
                         <img th:src="${photo.photoUrl}" class="img-fluid" alt=""/>
@@ -138,11 +131,11 @@
                         <!-- The "x" button for deleting photo-->
                         <div class="gallery-links d-flex align-items-center justify-content-center">
                             <a th:href="@{/photo/{id}(id=${photo.id})}"
-                            class = "btn btn-danger"
-                            onclick = "return confirm('Are you sure you want to delete this photo?');">
+                                data-cy="deleteBtn"
+                                class = "btn btn-danger"
+                                onclick = "return confirm('Are you sure you want to delete this photo?');">
                                 <i class="fa-solid fa-x"></i> X
                             </a>
-
                         </div>
                     </div>
                 </div>
@@ -155,7 +148,7 @@
                         <form method="post" th:action="@{/admin/uploadPhoto}" enctype="multipart/form-data">
                             <input type="hidden" id="galleryName" name="galleryName" th:value="${param.galleryName}"/>
                             <!-- Plus Button for uploading new photo -->
-                            <a id="addNewItems" href="#" class="d-flex align-items-center justify-content-center disabled-link">
+                            <a id="addNewItems" href="#" class="d-flex align-items-center justify-content-center disabled-link" data-cy="uploadBtn">
                                 <label for="photoUpload" style="cursor: pointer">
                                     <img src="assets/img/plus.png" class="img-fluid" alt="Add New Photo"/>
                                 </label>
